--- a/Blogs.html
+++ b/Blogs.html
@@ -16,7 +16,7 @@
                 <li><a href="#Store">Store</a></li>
                 <li><a href="#Careers">Careers</a></li>
                 <li><a href="#Blogs">Blogs</a></li>
-                <li><a href="#AboutUs">AboutUs</a></li>
+                <li><a href="#AboutUs">Aboutus</a></li>
                 <li><a href="#Contact" class="btn">Contact Us</a></li>
             </ul>
         </nav>
@@ -30,12 +30,26 @@
         </div>
 
         <div class="blog-container" id="blog-posts">
-
             <article class="blog-card" data-title="New Game Release Shadows of the Void">
                 <div class="blog-image-container">
-                    <div class="profile-photo">
-                        <img src="Images/UserProfiles/Akramer2k.jpg" alt="Author Profile">
-                        <span class="username">Akramer2k</span>
+                    <div class="profile-photo-container">
+                        <img src="Images/UserProfiles/Akramer2k.jpg" alt="Author Profile" class="profile-photo">
+                        <span class="username">Alex Johnson</span>
+                    </div>
+                    <img src="Images/Thumbnails/NextLevelInteractivity.png" alt="New Game Release">
+                </div>
+                <div class="blog-content">
+                    <h3>New Game Release: Shadows of the Void</h3>
+                    <p>We are excited to announce our latest project, "Shadows of the Void"! This action-packed adventure takes players on a journey through...</p>
+                    <p class="extra-content">The game features cutting-edge Unreal Engine 5 graphics, an immersive storyline, and dynamic combat mechanics. Explore breathtaking worlds and engage in intense battles that will challenge your skills.</p>
+                    <button class="read-more">Read More</button>
+                </div>
+            </article>
+            <article class="blog-card" data-title="New Game Release Shadows of the Void">
+                <div class="blog-image-container">
+                    <div class="profile-photo-container">
+                        <img src="Images/UserProfiles/Akramer2k.jpg" alt="Author Profile" class="profile-photo">
+                        <span class="username">Alex Johnson</span>
                     </div>
                     <img src="Images/Thumbnails/NextLevelInteractivity.png" alt="New Game Release">
                 </div>
@@ -47,17 +61,65 @@
                 </div>
             </article>
 
+            <article class="blog-card" data-title="New Game Release Shadows of the Void">
+                <div class="blog-image-container">
+                    <div class="profile-photo-container">
+                        <img src="Images/UserProfiles/Akramer2k.jpg" alt="Author Profile" class="profile-photo">
+                        <span class="username">Alex Johnson</span>
+                    </div>
+                    <img src="Images/Thumbnails/NextLevelInteractivity.png" alt="New Game Release">
+                </div>
+                <div class="blog-content">
+                    <h3>New Game Release: Shadows of the Void</h3>
+                    <p>We are excited to announce our latest project, "Shadows of the Void"! This action-packed adventure takes players on a journey through...</p>
+                    <p class="extra-content">The game features cutting-edge Unreal Engine 5 graphics, an immersive storyline, and dynamic combat mechanics. Explore breathtaking worlds and engage in intense battles that will challenge your skills.</p>
+                    <button class="read-more">Read More</button>
+                </div>
+            </article>
         </div>
     </section>
 
-    <footer class="bottom-bar">
-        <p>&copy; 2025 GameStudio. All rights reserved.</p>
-        <div class="social-icons">
-            <a href="#" target="_blank" class="social-icon">🐦</a>
-            <a href="#" target="_blank" class="social-icon">📘</a>
-            <a href="#" target="_blank" class="social-icon">📸</a>
-        </div>
-    </footer>
+<footer class="footer">
+  <div class="footer-content">
+    <div class="contact-info">
+      <div class="location">
+        <h3>Coaster Studio</h3>
+        <p></p>
+        <p>CoasterOperator@gmail.com</p>
+        <a href="https://maps.google.com/?q=LONDON" target="_blank">Terms And Conditions</a>
+        <p></p>
+        <a href="https://maps.google.com/?q=LONDON" target="_blank">Privacy Policy</a>
+        <p></p>
+        <a href="https://maps.google.com/?q=LONDON" target="_blank">Cookie Policy</a>
+        <p>© 2025 Coaster Studio Holdings, All Rights Reserved.</p>
+    </div>
+    <div class="location">
+        <h3>Coaster Studio</h3>
+        <p></p>
+        <a href="https://maps.google.com/?q=LONDON" target="_blank">Home</a>
+        <p></p>
+        <a href="https://maps.google.com/?q=LONDON" target="_blank">Projects</a>
+        <p></p>
+        <a href="https://maps.google.com/?q=LONDON" target="_blank">Store</a>
+        <p></p>
+        <a href="https://maps.google.com/?q=LONDON" target="_blank">Careers</a>
+        <p></p>
+        <a href="https://maps.google.com/?q=LONDON" target="_blank">Blogs</a>
+        <p></p>
+        <a href="https://maps.google.com/?q=LONDON" target="_blank">Aboutus</a>
+    </div>
+    <div class="newsletter">
+      <p>Want to be updated to the latest news?</p>
+      <a href="/newsletter-signup" class="btn-signup">SIGN UP FOR OUR NEWSLETTER</a>
+    </div>
+    <div class="social">
+      <a href="https://twitter.com/CoasterOperator" target="_blank">Twitter</a>
+      <a href="https://www.youtube.com/@CoasterStudio/featured" target="_blank">Youtube</a>
+      <a href="https://discord.gg/kxUvdgde4Y" target="_blank">Discord</a>
+    </div>
+  </div>
+</footer>
+
 
     <script src="script.js"></script>
 </body>
