--- a/Blogs.html
+++ b/Blogs.html
@@ -32,47 +32,38 @@
         <div class="blog-container" id="blog-posts">
             <article class="blog-card" data-title="New Game Release Shadows of the Void">
                 <div class="blog-image-container">
-                    <div class="profile-photo-container">
-                        <img src="Images/UserProfiles/Akramer2k.jpg" alt="Author Profile" class="profile-photo">
-                        <span class="username">Alex Johnson</span>
-                    </div>
                     <img src="Images/Thumbnails/NextLevelInteractivity.png" alt="New Game Release">
                 </div>
                 <div class="blog-content">
-                    <h3>New Game Release: Shadows of the Void</h3>
-                    <p>We are excited to announce our latest project, "Shadows of the Void"! This action-packed adventure takes players on a journey through...</p>
+                    <p>Author: Akramer2k</p>
+                    <h3>New Game Release</h3>
+                    <p>We are excited to announce our latest project</p>
                     <p class="extra-content">The game features cutting-edge Unreal Engine 5 graphics, an immersive storyline, and dynamic combat mechanics. Explore breathtaking worlds and engage in intense battles that will challenge your skills.</p>
                     <button class="read-more">Read More</button>
                 </div>
             </article>
             <article class="blog-card" data-title="New Game Release Shadows of the Void">
                 <div class="blog-image-container">
-                    <div class="profile-photo-container">
-                        <img src="Images/UserProfiles/Akramer2k.jpg" alt="Author Profile" class="profile-photo">
-                        <span class="username">Alex Johnson</span>
-                    </div>
                     <img src="Images/Thumbnails/NextLevelInteractivity.png" alt="New Game Release">
                 </div>
                 <div class="blog-content">
-                    <h3>New Game Release: Shadows of the Void</h3>
-                    <p>We are excited to announce our latest project, "Shadows of the Void"! This action-packed adventure takes players on a journey through...</p>
+                    <p>Author: Akramer2k</p>
+                    <h3>New Game Release</h3>
+                    <p>We are excited to announce our latest project</p>
                     <p class="extra-content">The game features cutting-edge Unreal Engine 5 graphics, an immersive storyline, and dynamic combat mechanics. Explore breathtaking worlds and engage in intense battles that will challenge your skills.</p>
                     <button class="read-more">Read More</button>
                 </div>
             </article>
 
-            <article class="blog-card" data-title="New Game Release Shadows of the Void">
+            <article class="blog-card" data-title="New Branding">
                 <div class="blog-image-container">
-                    <div class="profile-photo-container">
-                        <img src="Images/UserProfiles/Akramer2k.jpg" alt="Author Profile" class="profile-photo">
-                        <span class="username">Alex Johnson</span>
-                    </div>
-                    <img src="Images/Thumbnails/NextLevelInteractivity.png" alt="New Game Release">
+                    <img src="Images/Thumbnails/NewBranding.png" alt="New Branding">
                 </div>
                 <div class="blog-content">
-                    <h3>New Game Release: Shadows of the Void</h3>
-                    <p>We are excited to announce our latest project, "Shadows of the Void"! This action-packed adventure takes players on a journey through...</p>
-                    <p class="extra-content">The game features cutting-edge Unreal Engine 5 graphics, an immersive storyline, and dynamic combat mechanics. Explore breathtaking worlds and engage in intense battles that will challenge your skills.</p>
+                    <p>Author: litspaces</p>
+                    <h3>Coaster Studio: A New Era of Thrills</h3>
+                    <p>Exciting news for all Coaster Operator fans! Recently, we've embarked on a significant rebranding journey, transforming from Coaster Operator to Coaster Studio. This change marks the beginning of a new era filled with thrilling possibilities and opportunities...</p>
+                    <p class="extra-content">Since the start of development, our primary focus has been on Coaster Operator. But now, with the new name, we’re ready to expand our horizons. The success of The Giant Drop, which has garnered an impressive 2 million visits on Roblox, is just the beginning of what’s to come. Our amazing community is always hyping up new rides and eagerly anticipating sneak peeks of upcoming attractions. The Sneak Peaks channel on our Discord is the best place to find out about new rides releasing in the near future, including the highly anticipated Darkoaster, one of the many new rides in development.With the rebrand, Coaster Studio is no longer limited to just one game. We are developing various new coaster-themed games, each promising unique and exhilarating adventures. Within Coaster Operator, you can already enjoy operating attractions like Cobra's Curse and Giant Drop. And for those waiting patiently, Fisherboote is still under maintenance, but we promise it will be worth the wait.Our rebrand to Coaster Studio has unlocked many new opportunities, allowing us to bring even more exciting games and experiences to our players. We are thrilled for the future ahead and can't wait to share all the new developments with you. Thank you for being a part of this journey with Coaster Studio. Stay tuned for more updates and thrilling adventures!</p>
                     <button class="read-more">Read More</button>
                 </div>
             </article>
@@ -106,7 +97,7 @@
         <p></p>
         <a href="https://maps.google.com/?q=LONDON" target="_blank">Blogs</a>
         <p></p>
-        <a href="https://maps.google.com/?q=LONDON" target="_blank">Aboutus</a>
+        <a href="https://maps.google.com/?q=LONDON" target="_blank">About</a>
     </div>
     <div class="newsletter">
       <p>Want to be updated to the latest news?</p>
