--- a/index.html
+++ b/index.html
@@ -1,120 +1,47 @@
-
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Coming Soon</title>
-		<style>
-			body {
-				background-color: #f5f5f5;
-				margin-top: 8%;
-				color: #5d5d5d;
-				font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
-					"Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-					"Noto Color Emoji";
-				text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.75);
-				text-align: center;
-			}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coaster Studio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="logo">Coaster Studio</div>
+        <nav>
+            <ul>
+                <li><a href="Home">Home</a></li>
+                <li><a href="#Projects">Projects</a></li>
+                <li><a href="#Store">Store</a></li>
+                <li><a href="#Careers">Careers</a></li>
+                <li><a href="#Blogs">Blogs</a></li>
+                <li><a href="#AboutUs">AboutUs</a></li>
+                <li><a href="#Contact" class="btn">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
 
-			h1 {
-				font-size: 2.45em;
-				font-weight: 700;
-				color: #5d5d5d;
-				letter-spacing: -0.02em;
-				margin-bottom: 30px;
-				margin-top: 30px;
-			}
+    <section id="games">
+        <h2>Our Games</h2>
+        <div class="game-grid">
+            <div class="game-item">
+                <img src="Images/CoasterOperatorLogo.png" alt="Game 1">
+                <h3>Coaster Operator</h3>
+            </div>
+            <div class="game-item">
+                <img src="Images/NoImage.png" alt="Game 2">
+                <h3>???</h3>
+            </div>
+            <div class="game-item">
+                <img src="Images/NoImage.png" alt="Game 3">
+                <h3>???</h3>
+            </div>
+        </div>
+    </section>
 
-			.container {
-				width: 100%;
-				margin-right: auto;
-				margin-left: auto;
-			}
-
-			.animate__animated {
-				animation-duration: 1s;
-				animation-fill-mode: both;
-			}
-
-			.animate__fadeIn {
-				animation-name: fadeIn;
-			}
-
-			.info {
-				color: #5594cf;
-				fill: #5594cf;
-			}
-
-			.error {
-				color: #c92127;
-				fill: #c92127;
-			}
-
-			.warning {
-				color: #ffcc33;
-				fill: #ffcc33;
-			}
-
-			.success {
-				color: #5aba47;
-				fill: #5aba47;
-			}
-
-			.icon-large {
-				height: 132px;
-				width: 132px;
-			}
-
-			.description-text {
-				color: #707070;
-				letter-spacing: -0.01em;
-				font-size: 1.25em;
-				line-height: 20px;
-			}
-
-			.footer {
-				margin-top: 40px;
-				font-size: 0.7em;
-			}
-
-			.animate__delay-1s {
-				animation-delay: 1s;
-			}
-
-			@keyframes fadeIn {
-				from {
-					opacity: 0;
-				}
-				to {
-					opacity: 1;
-				}
-			}
-		</style>
-	</head>
-	<body>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="animate__animated animate__fadeIn">
-						<svg
-							class="warning icon-large fa-hard-hat"
-							xmlns="http://www.w3.org/2000/svg"
-							viewBox="0 0 512 512"
-						>
-							<path
-								d="M480 288c0-80.25-49.28-148.92-119.19-177.62L320 192V80a16 16 0 0 0-16-16h-96a16 16 0 0 0-16 16v112l-40.81-81.62C81.28 139.08 32 207.75 32 288v64h448zm16 96H16a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h480a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16z"
-							></path>
-						</svg>
-					</div>
-					<h1 class="animate__animated animate__fadeIn">We're working on it!</h1>
-					<div class="description-text animate__animated animate__fadeIn animate__delay-1s">
-						<p>This site is currently under construction.</p>
-						<p>Please check back soon.</p>
-						<section class="footer"><strong>Domain:</strong>CoasterOperator.com</section>
-					</div>
-				</div>
-			</div>
-		</div>
-	</body>
+    <footer>
+        <p>&copy; 2025 CoasterStudio. All rights reserved.</p>
+    </footer>
+</body>
 </html>
