--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo">Coaster Studio</div>
         <nav>
             <ul>
-                <li><a href="Home">Home</a></li>
+                <li><a href="index">Home</a></li>
                 <li><a href="#Projects">Projects</a></li>
                 <li><a href="#Store">Store</a></li>
                 <li><a href="#Careers">Careers</a></li>
