--- a/Cookies.html
+++ b/Cookies.html
@@ -11,12 +11,12 @@
         <div class="logo">Coaster Studio</div>
         <nav>
             <ul>
-                <li><a href="#Home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#Projects">Projects</a></li>
                 <li><a href="#Store">Store</a></li>
                 <li><a href="#Careers">Careers</a></li>
-                <li><a href="#Blogs">Blogs</a></li>
-                <li><a href="#AboutUs">Aboutus</a></li>
+                <li><a href="Blogs.html">Blogs</a></li>
+                <li><a href="#AboutUs">AboutUs</a></li>
                 <li><a href="#Contact" class="btn">Contact Us</a></li>
             </ul>
         </nav>
