--- a/Blogs.html
+++ b/Blogs.html
@@ -11,12 +11,12 @@
         <div class="logo">Coaster Studio</div>
         <nav>
             <ul>
-                <li><a href="#Home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#Projects">Projects</a></li>
                 <li><a href="#Store">Store</a></li>
                 <li><a href="#Careers">Careers</a></li>
-                <li><a href="#Blogs">Blogs</a></li>
-                <li><a href="#AboutUs">Aboutus</a></li>
+                <li><a href="Blogs.html">Blogs</a></li>
+                <li><a href="#AboutUs">AboutUs</a></li>
                 <li><a href="#Contact" class="btn">Contact Us</a></li>
             </ul>
         </nav>
@@ -81,7 +81,7 @@
         <p></p>
         <a href="https://maps.google.com/?q=LONDON" target="_blank">Privacy Policy</a>
         <p></p>
-        <a href="https://maps.google.com/?q=LONDON" target="_blank">Cookie Policy</a>
+        <a href="Cookies.html" target="_blank">Cookie Policy</a>
         <p>© 2025 Coaster Studio Holdings, All Rights Reserved.</p>
     </div>
     <div class="location">
