--- a/Blogs.html
+++ b/Blogs.html
@@ -77,11 +77,11 @@
         <h3>Coaster Studio</h3>
         <p></p>
         <p>CoasterOperator@gmail.com</p>
-        <a href="https://maps.google.com/?q=LONDON" target="_blank">Terms And Conditions</a>
+        <a href="TermsAndConditions.html" target="_blank">Terms And Conditions</a>
         <p></p>
-        <a href="https://maps.google.com/?q=LONDON" target="_blank">Privacy Policy</a>
+        <a href="PrivacyPolicy.html" target="_blank">Privacy Policy</a>
         <p></p>
-        <a href="Cookies.html" target="_blank">Cookie Policy</a>
+        <a href="CookiesPolicy.html" target="_blank">Cookie Policy</a>
         <p>© 2025 Coaster Studio Holdings, All Rights Reserved.</p>
     </div>
     <div class="location">
