--- a/Blogs.html
+++ b/Blogs.html
@@ -42,7 +42,7 @@
                     <button class="read-more">Read More</button>
                 </div>
             </article>
-            <article class="blog-card" data-title="New Game Release Shadows of the Void">
+            <article class="blog-card" data-title="Our Story">
                 <div class="blog-image-container">
                     <img src="Images/NoImage.png" alt="New Game Release">
                 </div>
@@ -55,7 +55,7 @@
                 </div>
             </article>
 
-            <article class="blog-card" data-title="New Branding">
+            <article class="blog-card" data-title="Branding">
                 <div class="blog-image-container">
                     <img src="Images/Thumbnails/NewBranding.png" alt="New Branding">
                 </div>
@@ -87,7 +87,7 @@
     <div class="location">
         <h3>Coaster Studio</h3>
         <p></p>
-        <a href="https://maps.google.com/?q=LONDON" target="_blank">Home</a>
+        <a href="index.html" target="_blank">Home</a>
         <p></p>
         <a href="https://maps.google.com/?q=LONDON" target="_blank">Projects</a>
         <p></p>
@@ -95,7 +95,7 @@
         <p></p>
         <a href="https://maps.google.com/?q=LONDON" target="_blank">Careers</a>
         <p></p>
-        <a href="https://maps.google.com/?q=LONDON" target="_blank">Blogs</a>
+        <a href="Blogs.html" target="_blank">Blogs</a>
         <p></p>
         <a href="https://maps.google.com/?q=LONDON" target="_blank">About</a>
     </div>
