--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Game Studio</title>
+    <title>Coaster Studio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
     </header>
 
     <section id="about-intro">
-        <h1>About Us</h1>
-        <p>Welcome to GameStudio, where creativity meets technology to build immersive gaming experiences. We are dedicated to creating games that captivate, inspire, and entertain gamers worldwide.</p>
+        <h1>Hey!</h1>
+        <p>Coaster Studios is a Roblox game studio, developing fun and engaging coaster-themed games! Try out Coaster Operator, an interactive game where you manage your own coaster rides. Rank up and gain experience to unlock new coasters and controls!</p>
     </section>
 
     <section id="our-mission">
@@ -39,18 +39,18 @@
         <h2>Meet Our Team</h2>
         <div class="team-grid">
             <div class="team-member">
-                <img src="team1.jpg" alt="Team Member 1">
-                <h3>Alex Johnson</h3>
-                <p>Lead Game Designer</p>
+                <img src="Images/ProfileIcons/Akramer2k.jpg" alt="Founder">
+                <h3>Akramer2k</h3>
+                <p>Founder</p>
             </div>
             <div class="team-member">
-                <img src="team2.jpg" alt="Team Member 2">
-                <h3>Samantha Lee</h3>
-                <p>Art Director</p>
+                <img src="Images/NoImage.png" alt="Ur Mom">
+                <h3>Ur Mom</h3>
+                <p>and ur dad</p>
             </div>
             <div class="team-member">
-                <img src="team3.jpg" alt="Team Member 3">
-                <h3>Michael Carter</h3>
+                <img src="Images/NoImage.png" alt="Ur Mom">
+                <h3>ME!</h3>
                 <p>Lead Developer</p>
             </div>
         </div>
@@ -73,21 +73,20 @@
           <div class="location">
               <h3>Coaster Studio</h3>
               <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">Home</a>
+              <a href="index.html" target="_blank">Home</a>
               <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">Projects</a>
+              <a href="Projects.html" target="_blank">Projects</a>
               <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">Store</a>
+              <a href="Careers.html" target="_blank">Careers</a>
               <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">Careers</a>
+              <a href="Blogs.html" target="_blank">Blogs</a>
               <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">Blogs</a>
-              <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">About</a>
+              <a href="About.html"_blank">About</a>
           </div>
           <div class="newsletter">
             <p>Want to be updated to the latest news?</p>
-            <a href="/newsletter-signup" class="btn-signup">SIGN UP FOR OUR NEWSLETTER</a>
+            <p>Want to be updated to the latest news?</p>
+            <a href="ConstuctionPage.html" class="btn-signup">SIGN UP FOR OUR NEWSLETTER</a>
           </div>
           <div class="social">
             <a href="https://twitter.com/CoasterOperator" target="_blank">Twitter</a>
