--- a/Blogs.html
+++ b/Blogs.html
@@ -70,47 +70,45 @@
         </div>
     </section>
 
-<footer class="footer">
-  <div class="footer-content">
-    <div class="contact-info">
-      <div class="location">
-        <h3>Coaster Studio</h3>
-        <p></p>
-        <p>CoasterOperator@gmail.com</p>
-        <a href="TermsAndConditions.html" target="_blank">Terms And Conditions</a>
-        <p></p>
-        <a href="PrivacyPolicy.html" target="_blank">Privacy Policy</a>
-        <p></p>
-        <a href="CookiesPolicy.html" target="_blank">Cookie Policy</a>
-        <p>© 2025 Coaster Studio Holdings, All Rights Reserved.</p>
-    </div>
-    <div class="location">
-        <h3>Coaster Studio</h3>
-        <p></p>
-        <a href="index.html" target="_blank">Home</a>
-        <p></p>
-        <a href="https://maps.google.com/?q=LONDON" target="_blank">Projects</a>
-        <p></p>
-        <a href="https://maps.google.com/?q=LONDON" target="_blank">Store</a>
-        <p></p>
-        <a href="https://maps.google.com/?q=LONDON" target="_blank">Careers</a>
-        <p></p>
-        <a href="Blogs.html" target="_blank">Blogs</a>
-        <p></p>
-        <a href="https://maps.google.com/?q=LONDON" target="_blank">About</a>
-    </div>
-    <div class="newsletter">
-      <p>Want to be updated to the latest news?</p>
-      <a href="/newsletter-signup" class="btn-signup">SIGN UP FOR OUR NEWSLETTER</a>
-    </div>
-    <div class="social">
-      <a href="https://twitter.com/CoasterOperator" target="_blank">Twitter</a>
-      <a href="https://www.youtube.com/@CoasterStudio/featured" target="_blank">Youtube</a>
-      <a href="https://discord.gg/kxUvdgde4Y" target="_blank">Discord</a>
-    </div>
-  </div>
-</footer>
-
+    <footer class="footer">
+        <div class="footer-content">
+          <div class="contact-info">
+            <div class="location">
+              <h3>Coaster Studio</h3>
+              <p></p>
+              <p>CoasterOperator@gmail.com</p>
+              <a href="TermsAndConditions.html" target="_blank">Terms And Conditions</a>
+              <p></p>
+              <a href="PrivacyPolicy.html" target="_blank">Privacy Policy</a>
+              <p></p>
+              <a href="CookiesPolicy.html" target="_blank">Cookie Policy</a>
+              <p>© 2025 Coaster Studio Holdings, All Rights Reserved.</p>
+          </div>
+          <div class="location">
+              <h3>Coaster Studio</h3>
+              <p></p>
+              <a href="index.html" target="_blank">Home</a>
+              <p></p>
+              <a href="Projects.html" target="_blank">Projects</a>
+              <p></p>
+              <a href="Careers.html" target="_blank">Careers</a>
+              <p></p>
+              <a href="Blogs.html" target="_blank">Blogs</a>
+              <p></p>
+              <a href="About.html"_blank">About</a>
+          </div>
+          <div class="newsletter">
+            <p>Want to be updated to the latest news?</p>
+            <p>Want to be updated to the latest news?</p>
+            <a href="ConstuctionPage.html" class="btn-signup">SIGN UP FOR OUR NEWSLETTER</a>
+          </div>
+          <div class="social">
+            <a href="https://twitter.com/CoasterOperator" target="_blank">Twitter</a>
+            <a href="https://www.youtube.com/@CoasterStudio/featured" target="_blank">Youtube</a>
+            <a href="https://discord.gg/kxUvdgde4Y" target="_blank">Discord</a>
+          </div>
+        </div>
+      </footer>
 
     <script src="script.js"></script>
 </body>
