--- a/ConstuctionPage.html
+++ b/ConstuctionPage.html
@@ -4,7 +4,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Coming Soon</title>
+		<link rel="shortcut icon" type="image/x-icon" href="Images/CoasterStudiosLogo.png" />
+		<title>Coaster Studio</title>
 		<style>
 			body {
 				background-color: #f5f5f5;
@@ -109,9 +110,11 @@
 					</div>
 					<h1 class="animate__animated animate__fadeIn">We're working on it!</h1>
 					<div class="description-text animate__animated animate__fadeIn animate__delay-1s">
-						<p>This site is currently under construction.</p>
+						<p>This Area is currently under construction.</p>
 						<p>Please check back soon.</p>
-						<section class="footer"><strong>Domain:</strong>CoasterOperator.com</section>
+						<section class="footer">
+							<a href="index.html" target="_blank">Back Home</a>
+						</section>
 					</div>
 				</div>
 			</div>
