--- a/index.html
+++ b/index.html
@@ -58,21 +58,20 @@
           <div class="location">
               <h3>Coaster Studio</h3>
               <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">Home</a>
+              <a href="index.html" target="_blank">Home</a>
               <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">Projects</a>
+              <a href="Projects.html" target="_blank">Projects</a>
               <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">Store</a>
+              <a href="Careers.html" target="_blank">Careers</a>
               <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">Careers</a>
+              <a href="Blogs.html" target="_blank">Blogs</a>
               <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">Blogs</a>
-              <p></p>
-              <a href="https://maps.google.com/?q=LONDON" target="_blank">About</a>
+              <a href="About.html"_blank">About</a>
           </div>
           <div class="newsletter">
             <p>Want to be updated to the latest news?</p>
-            <a href="/newsletter-signup" class="btn-signup">SIGN UP FOR OUR NEWSLETTER</a>
+            <p>Want to be updated to the latest news?</p>
+            <a href="ConstuctionPage.html" class="btn-signup">SIGN UP FOR OUR NEWSLETTER</a>
           </div>
           <div class="social">
             <a href="https://twitter.com/CoasterOperator" target="_blank">Twitter</a>
