--- a/Blogs.html
+++ b/Blogs.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Studio Blog</title>
+    <link rel="shortcut icon" type="image/x-icon" href="Images/CoasterStudiosLogo.png" />
+    <title>Coaster Studio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
