--- a/About.html
+++ b/About.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="Images/CoasterStudiosLogo.png" />
     <title>Coaster Studio</title>
     <link rel="stylesheet" href="style.css">
 </head>
