--- a/About.html
+++ b/About.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <header>
-        <div class="logo">GameStudio</div>
+        <div class="logo">Coaster Studio</div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="index.html#games">Games</a></li>
-                <li><a href="cookies.html">Cookies Policy</a></li>
-                <li><a href="index.html#contact" class="btn">Contact Us</a></li>
+                <li><a href="ConstuctionPage.html">Projects</a></li>
+                <li><a href="ConstuctionPage.html">Careers</a></li>
+                <li><a href="Blogs.html">Blogs</a></li>
+                <li><a href="About.html">AboutUs</a></li>
+                <li><a href="ConstuctionPage.html" class="btn">Contact Us</a></li>
             </ul>
         </nav>
     </header>
