--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#Projects">Projects</a></li>
-                <li><a href="#Store">Store</a></li>
-                <li><a href="#Careers">Careers</a></li>
+                <li><a href="ConstuctionPage.html">Projects</a></li>
+                <li><a href="ConstuctionPage.html">Careers</a></li>
                 <li><a href="Blogs.html">Blogs</a></li>
-                <li><a href="#AboutUs">AboutUs</a></li>
-                <li><a href="#Contact" class="btn">Contact Us</a></li>
+                <li><a href="About.html">AboutUs</a></li>
+                <li><a href="ConstuctionPage.html" class="btn">Contact Us</a></li>
             </ul>
         </nav>
     </header>
