--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coaster Studio</title>
+    <meta content="Coaster Studio" property="og:title" />
+    <meta content="Coaster Studios is a Roblox game studio, developing fun and engaging coaster-themed games! Try out Coaster Operator, an interactive game where you manage your own coaster rides. Rank up and gain experience to unlock new coasters and controls!" property="og:description" />
+    <meta content="https://coasteroperator.com" property="og:url" />
+    <meta content="https://cdn.discordapp.com/attachments/808754994341216296/1337241603869249588/NextLevelInteractivity.png?ex=67a6bacb&is=67a5694b&hm=086acf7734e17844ac2f91ddd9f2df489949a84ca8098ae85aabef6677de45f2&" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="shortcut icon" type="image/x-icon" href="Images/CoasterStudiosLogo.png" />
     <title>Coaster Studio</title>
     <link rel="stylesheet" href="style.css">
