--- a/Blogs.html
+++ b/Blogs.html
@@ -38,7 +38,7 @@
                     <p>Author: Akramer2k</p>
                     <h3>New Game Release</h3>
                     <p>We are excited to announce our latest project</p>
-                    <p class="extra-content">The game features cutting-edge Unreal Engine 5 graphics, an immersive storyline, and dynamic combat mechanics. Explore breathtaking worlds and engage in intense battles that will challenge your skills.</p>
+                    <p class="extra-content">Jk lol get troll</p>
                     <button class="read-more">Read More</button>
                 </div>
             </article>
