--- a/Careers.html
+++ b/Careers.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ConstuctionPage.html">Projects</a></li>
-                <li><a href="ConstuctionPage.html">Careers</a></li>
+                <li><a href="Careers.html">Careers</a></li>
                 <li><a href="Blogs.html">Blogs</a></li>
                 <li><a href="About.html">AboutUs</a></li>
                 <li><a href="ConstuctionPage.html" class="btn">Contact Us</a></li>
