--- a/Careers.html
+++ b/Careers.html
@@ -48,7 +48,7 @@
                 <p>The Beta Tester at Coaster Studio plays a critical role in ensuring the quality and playability of the studio’s Roblox games before they are released to the public. By thoroughly testing the game’s features, mechanics, and overall experience, beta testers help identify bugs, gameplay issues, and areas for improvement, ultimately contributing to the studio’s success</p>
                 <p><strong>Location:</strong> Remote</p>
                 <p><strong>Type:</strong> Full-time</p>
-                <a href="#" class="btn apply-btn">Applications Closed/a>
+                <a href="#" class="btn apply-btn">Applications Closed</a>
             </div>
         </div>
     </section>
