--- a/About.html
+++ b/About.html
@@ -29,12 +29,12 @@
 
     <section id="our-mission">
         <h2>Our Mission</h2>
-        <p>Our mission is simple: to push the boundaries of what’s possible in gaming. We believe in storytelling, innovative gameplay, and high-quality graphics that leave lasting impressions on players.</p>
+        <p>Also write this one lol</p>
     </section>
 
     <section id="company-vision">
         <h2>Our Vision</h2>
-        <p>We envision a future where games are more than entertainment. At GameStudio, we aim to create games that connect people, spark imagination, and bring communities together globally.</p>
+        <p>Yo can someone write this im mad lazy</p>
     </section>
 
     <section id="team">
