--- a/Blogs.html
+++ b/Blogs.html
@@ -30,21 +30,33 @@
         </div>
 
         <div class="blog-container" id="blog-posts">
-            <article class="blog-card" data-title="New Game Release Shadows of the Void">
+            <article class="blog-card" data-title="Content Creator Program">
                 <div class="blog-image-container">
-                    <img src="Images/Thumbnails/NextLevelInteractivity.png" alt="New Game Release">
+                    <img src="Images/Thumbnails/checkourYT2.png" alt="Content Creator Program">
                 </div>
                 <div class="blog-content">
-                    <p>Author: Akramer2k</p>
-                    <h3>New Game Release</h3>
-                    <p>We are excited to announce our latest project</p>
-                    <p class="extra-content">Jk lol get troll</p>
+                    <p>Author: Laggybott</p>
+                    <h3>Content Creator Program</h3>
+                    <p>Coaster Studios, is always looking for content creators to help boost the active/player count of our games!
+                        have you ever wanted to be 1 well now you can join us on our journey.
+                        but you may be wondering what's in stock if your a content creator for Coaster Studios well let me tell you!</p>
+                    <p class="extra-content">You can apply by contacting 1 of our content managers and then we will simply run you through a quick test to make sure your worthy of joining our program!
+                        we look for quality content so if your struggling to grow on social media and want a quick roller coaster ride to the top feel free to apply!
+                        you don't have to be a MASSIVE Creator to join us just someone with a passion to making quality content for us and our community.
+                        
+                        We also do a active check at the end of every month to make sure people still have that passion to be active and create content for us
+                        so try to post at least 1-3 videos a month if you do decide on joining our content creation team!
+                        we can also help you as well with as much as you need such as... A Content Creator Group Role, Discord Server Role, In Game Role.
+                        so people know your the big deal! we also offer Coaster Codes for some of our more bigger creators within our community which you can use to promote within your videos!
+                        you can also giveaway your own coaster points to the community as well!
+                        
+                        SO COME JOIN US WHAT ARE YOU WAITING FOR I KNOW YOU WANT TO!</p>
                     <button class="read-more">Read More</button>
                 </div>
             </article>
             <article class="blog-card" data-title="Our Story">
                 <div class="blog-image-container">
-                    <img src="Images/NoImage.png" alt="New Game Release">
+                    <img src="Images/Thumbnails/AttractionsWorldwide1.png" alt="Our Story">
                 </div>
                 <div class="blog-content">
                     <p>Author: Doncena8</p>
